# balance-bot

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  README.md  alembic.ini  auto_restarter.sh  balance.py  base.Dockerfile  bot.py  buildbase.sh  client.py  clientworker.py  config.example  config.py  datacollector.py  dialogue.py  docker-compose.yml  encrypt.py  errors.py  eventmanager.py  exchangeworker.py  init.Dockerfile  init_db.py  main.py  migrate.py  migrations.Dockerfile  mkdocs.yml  pyproject.toml  requirements.txt  startup.sh  upgrade_db.sh  user.py  usermanager.py  utils.py
lib/common/: pyproject.toml
lib/common/common/: config.py  messenger.py
lib/common/common/exchanges/: __init__.py  channel.py  exchangemanager.py  exchangeticker.py  exchangeworker.py
lib/common/common/test_utils/: fixtures.py  mock.py  mockexchange.py
lib/core/: pyproject.toml
lib/core/core/: env.py  json.py  utils.py
lib/database/: Dockerfile  __main__.py  pyproject.toml
lib/database/alembic/: env.py  script.py.mako
lib/database/alembic/versions/: 02020a57ea5c_add_templategrant.py  02c46315e2b9_create_presets_table.py  0856da4f1911_clear.py  0a3782ac454d_.py  0b86b2e9d925_add_info_and_about_me_cols_to_user.py  150590cb8130_make_init_balance_not_null.py  16c917fc83ca_change_unrealized_col.py  1b15262ae438_add_editsmixin_to_journal.py  1f35497b5996_fix_typo.py  21a8724671d8_add_label_group.py  358424d1dd1c_reintroduce_coin_column_in_transfer.py  3e73e9ecc90e_add_market_type_to_exec.py  439d8fa64429_remove_archive_table.py  4baacbf738d6_add_transfer_id_to_exec.py  5f2bdbbb4b16_refactor_event.py  5f9dd601983a_add_reduce_column_to_exec.py  6953e25d67fe_fix_foreign_key_on_chaptergrant.py  76728ce5b2dc_add_wildcards_to_authgrant.py  8c304830d9af_redo_evententry_and_score_schemas.py  a068507680cd_add_about_me_to_user.py  a56e49577f73_add_name_col_to_authgrant.py  a8e101b2ffbf_increase_currency_length_on_amount_add_.py  bd3550f6de65_create_api_key_unique_constraint_on_.py  c1cf25c23103_remove_public_column_on_grant.py  c75fd142c203_remove_rekt_on_from_client_and_add_.py  cd3ea0fe29c6_make_currency_varchar.py  d019cbe0748b_advanced_template_schema.py  d114ff70a3af_add_name_to_action.py  d1f13f442d97_change_platform_structure.py  d29c21f66a4f_add_rate_col_to_amount.py  dd00202a060f_add_template_id_to_chapter.py  e845d16188d5_remove_unnecessary_transfer_cols.py  eee37086c3b9_rename_bybit.py  ef56206a626e_authgrants.py  f0698bc63edd_add_close_time_on_trade.py  f4263b42cb51_add_unique_constraint_to_event_entry.py  f6be99aae636_revisit_action_ddl.py  fa3c22038e23_add_about_me_to_user.py
lib/database/database/: calc.py  dbasync.py  dbsync.py  enums.py  env.py  errors.py  utils.py
lib/database/database/dbmodels/: __init__.py  action.py  alert.py  archive.py  authgrant.py  balance.py  chapter.py  chaptergroup.py  client.py  coin.py  event.py  evententry.py  execution.py  goal.py  label.py  (+11 more)
projects/api/: Dockerfile  __main__.py  pyproject.toml
projects/api/api/: app.py  authenticator.py  crudrouter.py  db_session_middleware.py  dependencies.py  env.py  oauth.py  settings.py  usermanager.py  users.py
projects/api/tests/: conftest.py  test_event.py  test_register.py  test_user.py
projects/bot/: Dockerfile  __main__.py  pyproject.toml
projects/bot/bot/: env.py  eventmanager.py  utils.py
projects/collector/: Dockerfile  __main__.py  pyproject.toml
projects/collector/collector/: errors.py  volumefetcher.py
projects/collector/tests/: conftest.py  test_event.py  test_pnl_service.py
tradealpha/api/: Dockerfile  app.py  authenticator.py  crudrouter.py  db_session_middleware.py  dependencies.py  exceptions.py  oauth.py  pyproject.toml  requirements.txt  settings.py  usermanager.py  users.py
tradealpha/api/models/: FilterParam.py  __init__.py  alert.py  amount.py  analytics.py  client.py  completejournal.py  discord_user.py  event.py  eventinfo.py  execution.py  guild.py  label.py  labelinfo.py  pnldata.py  template.py  trade.py  transfer.py  user.py  websocket.py
tradealpha/api/routers/: action.py  analytics.py  authentication.py  client.py  discord.py  discordauth.py  event.py  journal.py  label.py  template.py  test.py  trade.py  transfer.py  user.py  websocket.py
tradealpha/api/tests/: fixtures.py  test_event.py  test_register.py  test_user.py
tradealpha/api/utils/: analytics.py  client.py  responses.py
tradealpha/bot/: .env.example  Dockerfile  bot.py  config.py  eventmanager.py  pyproject.toml  requirements.txt  utils.py
tradealpha/bot/cogs/: __init__.py  alert.py  balance.py  cogbase.py  events.py  history.py  leaderboard.py  misc.py  register.py  user.py
tradealpha/collector/: Dockerfile  collector.py  config.py  pyproject.toml  volumefetcher.py
tradealpha/collector/protocols/: balance.py
tradealpha/collector/services/: actionservice.py  alertservice.py  balanceservice.py  baseservice.py  cointracker.py  dataservice.py  eventservice.py  syncedservice.py
tradealpha/collector/tests/: conftest.py  test_pnl_service.py
tradealpha/common/: .env.example  Dockerfile  calc.py  config.py  customjson.py  dbasync.py  dbsync.py  dbutils.py  enums.py  messenger.py  pyproject.toml  requirements.txt  utils.py
tradealpha/common/dbmodels/: __init__.py  action.py  alert.py  archive.py  balance.py  base.py  chapter.py  chaptergroup.py  client.py  coin.py  discorduser.py  editsmixin.py  event.py  execution.py  goal.py  guild.py  guildassociation.py  journal.py  label.py  pnldata.py  rule.py  score.py  serializer.py  symbol.py  template.py  trade.py  transfer.py  types.py  user.py
tradealpha/common/exchanges/: __init__.py  channel.py  exchangemanager.py  exchangeticker.py  exchangeworker.py
tradealpha/common/models/: __init__.py  action.py  async_websocket_manager.py  balance.py  client.py  compactpnldata.py  daily.py  dialogue.py  document.py  eventinfo.py  gain.py  history.py  interval.py  leaderboard.py  market.py  observer.py  trade.py
tradealpha/common/redis/: __init__.py  client.py  rpc.py  user.py
tradealpha/common/tests/: conftest.py  mockexchange.py
(+592 files in other folders)
