[tool.poetry]
name = "tradealpha"
version = "0.1.0"
description = "Social Journaling and Analytics Platform for Traders"

[tool.poetry.dependencies]
python = "3.10.5"
api = {path = "api", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"