[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["jacksn"]


[tool.poetry.dependencies]
python = "3.10.3"
SQLAlchemy = { extras=["asyncio"], version="1.4.40" }
database = { path = "../database", develop = true }
core = { path = "../core", develop = true}
ccxt = "1.57.9"
aiohttp = ">3.7.4"
pydantic = "1.8.2"
aioredis = "2.0.1"
sqlalchemy_utils = "0.38.2"


[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"