[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["jacksn"]


[tool.poetry.dependencies]
python = "3.10.3"
pydantic = "1.8.2"
orjson = "3.6.8"
python-dotenv = "0.19.0"
pytz = "2022.4"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"