[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["jacksn"]


[tool.poetry.dependencies]
python = "3.10.3"
SQLAlchemy = { extras=["asyncio"], version=">=2.0.0" }
asyncpg = "0.25.0"
sqlalchemy_utils = "0.38.2"
psycopg2-binary = "2.9.3"
fastapi_users_db_sqlalchemy = "4.0.3"
alembic = "1.7.6"
discord-py = "1.7.1"
aioredis = "2.0.1"
core = { path = "../core", develop = true}
python-dateutil = "2.8.2"
numpy = "1.22.4"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"