[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Discord bot extension for the trade alpha platform"
authors = ["jacksn"]

[tool.poetry.dependencies]
python = "3.10.3"
matplotlib = "3.5.0"
discord-py-slash-command = "3.0.1"
common = {path = "../../lib/common", develop = true }

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"