[tool.poetry]
name = "collector"
version = "0.1.0"
description = "The heart of the platform - gets the data."
authors = ["jacksn"]

[tool.poetry.dependencies]
python = "3.10.3"
APScheduler = "3.9.1"
common = {path = "../../lib/common", develop = true }
core = { path = "../../lib/core", develop = true}

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"