[tool.poetry]
name = "collector"
version = "0.1.0"
description = "The heart of the platform - gets the data."

[tool.poetry.dependencies]
python = "3.8.6"
common = {path = "../common", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"